--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
+    "react-optimized-image": "^0.4.1",
     "responsive-loader": "^2.3.0",
     "svg-sprite-loader": "^6.0.11",
     "webp-loader": "^0.6.0"
