--- a/package.json
+++ b/package.json
@@ -10,25 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "image-trace-loader": "^1.0.2",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^9.0.0",
-    "jimp": "^0.16.1",
-    "lqip-loader": "^2.2.1",
     "next": "12.1.0",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
     "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
-    "react-icons": "^4.3.1",
-    "react-optimized-image": "^0.4.1",
-    "responsive-loader": "^2.3.0",
-    "svg-sprite-loader": "^6.0.11",
-    "webp-loader": "^0.6.0"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
