--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,15 +4,15 @@ backend:
 media_folder: public/img
 public_folder: img
 collections:
-  - name 'settings'
+  - name: 'settings'
     label: 'Settings'
     files:
       - label: 'site'
         name: 'site'
         file: 'site.md'
         fields:
-          - { label: 'Title', name: 'title', widget: 'string'}
-      
+          - { label: 'Title', name: 'title', widget: 'string' }
+
   - name: 'pages'
     label: 'Pages'
     files:
