--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.16.7",
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
+    "@types/webpack-env": "^1.16.3",
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
