--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,51 +3,85 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 media_folder: public/img
 public_folder: img
+slug:
+  encoding: "ascii"
+  clean_accents: true
+  sanitize_replacement: "_"
 collections:
-  - name: 'setup'
-    label: 'Setup'
+  - name: "setup"
+    label: "Setup"
     files:
-      - label: 'About'
-        name: 'about'
-        file: 'content/about.md'
+      - label: "About"
+        name: "about"
+        file: "content/about.md"
         fields:
-          - { label: 'Title', name: 'title', widget: 'string' }
-          - { label: 'Post', name: 'post', widget: 'number' }
-          - { label: 'Tagline', name: 'tagline', widget: 'string' }
-          - { label: 'Mission', name: 'mission', widget: 'string' }
-          - { label: 'Vision', name: 'vision', widget: 'string' }
-          - label: 'Post Officers'
-            name: 'officers'
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Post", name: "post", widget: "number" }
+          - { label: "Tagline", name: "tagline", widget: "string" }
+          - { label: "Mission", name: "mission", widget: "string" }
+          - { label: "Vision", name: "vision", widget: "string" }
+          - label: "Post Officers"
+            name: "officers"
             widget: list
             fields:
-              - { label: 'Title', name: 'title', widget: 'string' }
-              - { label: 'Name', name: 'name', widget: 'text' }
-              - { label: 'Description', name: 'description', widget: 'text' }
-      - label: 'Contact'
-        name: 'contact'
-        file: 'content/contact.md'
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Name", name: "name", widget: "text" }
+              - { label: "Description", name: "description", widget: "text" }
+      - label: "Social Media"
+        name: "social"
+        file: "content/social.md"
         fields:
-          - { label: 'Email', name: 'email', widget: 'string' }
-          - { label: 'Phone', name: 'phone', widget: 'string' }
-          - { label: 'Info', name: 'info', widget: 'string' }
-          - { label: 'Address', name: 'address', widget: 'string' }
-          - { label: 'City', name: 'city', widget: 'string' }
-          - { label: 'State', name: 'state', widget: 'string' }
-          - { label: 'Zip', name: 'zip', widget: 'number' }
+          - label: "Social Medias"
+            name: "socials"
+            widget: list
+            fields:
+              - { label: "Account", name: "account", widget: "string" }
+              - { label: "Link", name: "link", widget: "string" }
+      - label: "Contact"
+        name: "contact"
+        file: "content/contact.md"
+        fields:
+          - { label: "Email", name: "email", widget: "string" }
+          - { label: "Phone", name: "phone", widget: "string" }
+          - { label: "Info", name: "info", widget: "string" }
+          - { label: "Address", name: "address", widget: "string" }
+          - { label: "City", name: "city", widget: "string" }
+          - { label: "State", name: "state", widget: "string" }
+          - { label: "Zip", name: "zip", widget: "number" }
+      - label: "News"
+        name: "news"
+        folder: "content/news"
+        create: true
+        slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
+        fields:
+          - { label: "Title", name: "title", widget: "string", required: true }
+          - {
+              label: "Publish Date",
+              name: "date",
+              widget: "datetime",
+              required: true,
+            }
+          - {
+              label: "Featured Image",
+              name: "thumbnail",
+              widget: "image",
+              required: true,
+            }
+          - { label: "Body", name: "body", widget: "markdown", required: true }
 
-  - name: 'pages'
-    label: 'Pages'
+  - name: "pages"
+    label: "Pages"
     files:
-      - label: 'Home'
-        name: 'home'
-        file: 'content/home.md'
+      - label: "Home"
+        name: "home"
+        file: "content/home.md"
         fields:
-          - { label: 'Title', name: 'title', widget: 'string' }
-          - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-          - { label: 'Body', name: 'body', widget: 'markdown' }
-          - label: 'Cats'
-            name: 'cats'
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - label: "Cats"
+            name: "cats"
             widget: list
             fields:
-              - { label: 'Name', name: 'name', widget: 'string' }
-              - { label: 'Description', name: 'description', widget: 'text' }
+              - { label: "Name", name: "name", widget: "string" }
+              - { label: "Description", name: "description", widget: "text" }
