--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -50,6 +50,7 @@ collections:
           - { label: "Zip", name: "zip", widget: "number" }
       - label: "News"
         name: "news"
+        file: "content/news.md"
         folder: "content/news"
         create: true
         slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
