--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  branch: main
 media_folder: public/img
 public_folder: img
 slug:
@@ -11,15 +11,79 @@ collections:
   - name: "setup"
     label: "Setup"
     files:
+      - label: "Post Information"
+        name: "post"
+        file: "content/post.md"
+        fields:
+          - { label: "Post Number", name: "number", widget: "number" }
+          - { label: "Post Name", name: "name", widget: "string" }
+      - label: "Address"
+        name: "address"
+        file: "content/address.md"
+        fields:
+          - { label: "Street", name: "street", widget: "string" }
+          - { label: "City", name: "city", widget: "string" }
+          - { label: "State", name: "state", widget: "string" }
+          - { label: "Zip", name: "zip", widget: "string" }
+      - label: "Contact"
+        name: "contact"
+        file: "content/contact.md"
+        fields:
+          - { label: "Email", name: "email", widget: "string" }
+          - { label: "Phone", name: "phone", widget: "string" }
+          - label: "Social Media Accounts"
+            name: "socials"
+            widget: list
+            fields:
+              - { label: "Account", name: "account", widget: "string" }
+              - { label: "Link", name: "link", widget: "string" }
+  - name: "pages"
+    label: "Pages"
+    files:
+      - label: "Home"
+        name: "home"
+        file: "content/home.md"
+        fields:
+          - {
+              label: "Hero Image",
+              name: "image",
+              widget: "image",
+              required: true,
+            }
+          - {
+              label: "Hero Tint",
+              name: "tint",
+              widget: "number",
+              required: true,
+            } # change to select options if needed
+          - {
+              label: "Hero Tagline",
+              name: "tagline",
+              widget: "string",
+              required: true,
+            }
       - label: "About"
         name: "about"
         file: "content/about.md"
         fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Post", name: "post", widget: "number" }
-          - { label: "Tagline", name: "tagline", widget: "string" }
-          - { label: "Mission", name: "mission", widget: "string" }
-          - { label: "Vision", name: "vision", widget: "string" }
+          - {
+              label: "Description",
+              name: "description",
+              widget: "string",
+              required: true,
+            }
+          - {
+              label: "Vision",
+              name: "vision",
+              widget: "string",
+              required: true,
+            }
+          - {
+              label: "mission",
+              name: "mission",
+              widget: "string",
+              required: true,
+            }
           - label: "Post Officers"
             name: "officers"
             widget: list
@@ -27,27 +91,6 @@ collections:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Name", name: "name", widget: "text" }
               - { label: "Description", name: "description", widget: "text" }
-      - label: "Social Media"
-        name: "social"
-        file: "content/social.md"
-        fields:
-          - label: "Social Medias"
-            name: "socials"
-            widget: list
-            fields:
-              - { label: "Account", name: "account", widget: "string" }
-              - { label: "Link", name: "link", widget: "string" }
-      - label: "Contact"
-        name: "contact"
-        file: "content/contact.md"
-        fields:
-          - { label: "Email", name: "email", widget: "string" }
-          - { label: "Phone", name: "phone", widget: "string" }
-          - { label: "Info", name: "info", widget: "string" }
-          - { label: "Address", name: "address", widget: "string" }
-          - { label: "City", name: "city", widget: "string" }
-          - { label: "State", name: "state", widget: "string" }
-          - { label: "Zip", name: "zip", widget: "number" }
   - label: "News"
     name: "news"
     folder: "content/news"
@@ -68,20 +111,3 @@ collections:
           required: true,
         }
       - { label: "Body", name: "body", widget: "markdown", required: true }
-
-  - name: "pages"
-    label: "Pages"
-    files:
-      - label: "Home"
-        name: "home"
-        file: "content/home.md"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Publish Date", name: "date", widget: "datetime" }
-          - { label: "Body", name: "body", widget: "markdown" }
-          - label: "Cats"
-            name: "cats"
-            widget: list
-            fields:
-              - { label: "Name", name: "name", widget: "string" }
-              - { label: "Description", name: "description", widget: "text" }
