--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -112,8 +112,20 @@ collections:
             widget: list
             fields:
               - { label: "Title", name: "title", widget: "string" }
-              - { label: "Name", name: "name", widget: "text" }
+              - { label: "Name", name: "name", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
+          - {
+              label: "FAQ Description",
+              name: "faqDescription",
+              widget: "string",
+              required: true,
+            }
+          - label: "FAQ"
+            name: "faq"
+            widget: list
+            fields:
+              - { label: "Question", name: "question", widget: "string" }
+              - { label: "Answer", name: "answer", widget: "string" }
   - label: "News"
     name: "news"
     folder: "content/news"
