--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -48,21 +48,22 @@ collections:
           - { label: "City", name: "city", widget: "string" }
           - { label: "State", name: "state", widget: "string" }
           - { label: "Zip", name: "zip", widget: "string" }
+  - name: "pages"
+    label: "Pages"
+    files:
       - label: "Contact"
         name: "contact"
         file: "content/contact.md"
         fields:
           - { label: "Email", name: "email", widget: "string" }
           - { label: "Phone", name: "phone", widget: "string" }
+          - { label: "Description", name: "description", widget: "text" }
           - label: "Social Media Accounts"
             name: "socials"
             widget: list
             fields:
               - { label: "Account", name: "account", widget: "string" }
               - { label: "Link", name: "link", widget: "string" }
-  - name: "pages"
-    label: "Pages"
-    files:
       - label: "Home"
         name: "home"
         file: "content/home.md"
@@ -104,7 +105,7 @@ collections:
           - {
               label: "history",
               name: "history",
-              widget: "string",
+              widget: "text",
               required: true,
             }
           - label: "Post Officers"
