--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
     "next-seo": "^5.2.0",
     "react": "17.0.2",
