--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,12 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"incremental": true,
-		"baseUrl": ".",
+		"baseUrl": "./",
 		"paths": {
-			"@content/*": ["content/*"],
-			"@components/*": ["src/components/*"],
-			"@styles/*": ["src/styles/*"],
-			"@store/*": ["src/store/*"],
-			"@utils/*": ["src/utils/*"]
+			"@content/*": ["./content/*"],
+			"@components/*": ["./src/components*"],
+			"@store/*": ["./src/store*"],
+			"@utils/*": ["./src/utils*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
