--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,13 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"incremental": true
-		// "baseUrl": ".",
-		// "paths": {
-		// 	"@content/*": ["./content/*"],
-		// 	"@components/*": ["./src/components*"],
-		// 	"@store/*": ["./src/store*"],
-		// 	"@utils/*": ["./src/utils*"]
-		// }
+		"incremental": true,
+		"baseUrl": "src",
+		"paths": {
+			"@components": ["components/index"],
+			"@store/*": ["store/*"],
+			"@utils": ["utils/index"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
