--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "date-fns": "^2.28.0",
     "next": "12.1.0",
     "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
