--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "date-fns": "^2.28.0",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
